# OMLT

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.md  LICENSE  LICENSE.md  LICENSE.rst  LICENSE.txt  Makefile  README.md  README.rst  _test.py  calvin_dense.onnx  calvin_test_please_ignore.onnx  environment.yml  gbrt_example.py  gbrt_utils.py  justfile  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: julia_tests.yml  main.yml  publish_release.yml  tests.yml
data/AttributedGraphDataset/citeseer/raw/: attrs.npz  edgelist.txt  labels.txt
docs/: Makefile  conf.py  environment.yml  index.rst  installation.rst  license.rst  notebooks.rst  pull_request_template.md  quickstart.rst  requirements.txt
docs/api/: modules.rst  omlt.gbt.rst  omlt.io.rst  omlt.neuralnet.rst  omlt.rst  optml.gbt.rst  optml.io.rst  optml.neuralnet.rst  optml.rst
docs/api_doc/: omlt.block.rst  omlt.gbt.rst  omlt.io.rst  omlt.linear_tree.rst  omlt.neuralnet.activations.rst  omlt.neuralnet.layer.rst  omlt.neuralnet.layers.rst  omlt.neuralnet.layers_activations.rst  omlt.neuralnet.network_definition.rst  omlt.neuralnet.nn_formulation.rst  omlt.neuralnet.rst  omlt.rst  omlt.scaling.rst
docs/notebooks/: bo_with_trees.ipynb  gbt.ipynb  helpers.py  index.rst
docs/notebooks/data/: build_sin_quadratic_csv.py  reformer.csv  sin_quadratic.csv
docs/notebooks/linear_trees/: linear_tree_formulations.ipynb
docs/notebooks/neuralnet/: auto-thermal-reformer-relu.ipynb  auto-thermal-reformer.ipynb  build_network.ipynb  calvin_example.ipynb  example_graph_neural_network.ipynb  graph_neural_network_formulation.ipynb  import_network.ipynb  index_handling.ipynb  mnist_example_convolutional.ipynb  mnist_example_dense.ipynb  neural_network_formulations.ipynb  neural_network_in_julia.ipynb
docs/notebooks/neuralnet/reformer_nn/: fingerprint.pb  keras_metadata.pb  saved_model.pb
docs/notebooks/neuralnet/reformer_nn_relu/: fingerprint.pb  keras_metadata.pb  saved_model.pb
docs/notebooks/trees/: bo_with_trees.ipynb  linear_tree_formulations.ipynb
opt/: input_output.py  keras_reader.py  neuralnet.py  scaling.py  todo.txt  utils.py
opt/tests/: test_input_output.py  test_keras_reader.py  test_neural_net.py  test_scaling.py  train_keras_models.py
opt/tests/models/keras_linear_131_sigmoid_softplus_output_activation/: saved_model.pb
opt/tests/models/keras_linear_2353/: saved_model.pb
optml/: __init__.py  block.py  formulation.py  scaling.py
optml/neuralnet/: __init__.py  full_space.py  keras_reader.py  reduced_space.py  relu.py
optml/tests/: run_tests.py  test_input_output.py  test_keras.py  test_keras_reader.py  test_network_definition.py  test_neural_net.py  test_relu.py  test_scaling.py  train_keras_models.py
optml/tests/models/keras_linear_131/: saved_model.pb
pyoml/opt/: gbt.py  input_output.py  keras_reader.py  network_definition.py  neural.py  neuralnet.py  relu.py  scaling.py  utils.py
pyoml/opt/tests/: run_tests.py  test_keras.py  test_keras_reader.py  test_network_definition.py  test_neural.py  test_neural_net.py  test_relu.py  test_relu_bigm.py  test_relu_complementarity.py  test_scaling.py  train_keras_models.py
pyoml/opt/todo/: recurrent.py
src/omlt/: __init__.py  base.py  block.py  dependencies.py  formulation.py  scaling.py  utils.py
src/omlt/base/: __init__.py  constraint.py  expression.py  julia.py  language.py  pyomo.py  var.py
src/omlt/gbt/: __init__.py  formulation.py  gbt_formulation.py  model.py
src/omlt/io/: __init__.py  input_bounds.py  keras_reader.py  onnx.py  onnx_parser.py  sklearn-reader.py  sklearn_reader.py
src/omlt/io/keras/: __init__.py  keras_reader.py
src/omlt/linear_tree/: __init__.py  gblt_model.py  lt_definition.py  lt_formulation.py
src/omlt/lineartree/: __init__.py  lt_definition.py  lt_formulation.py  lt_model.py  lt_model_static.py
src/omlt/neuralnet/: __init__.py  formulation.py  full_space.py  layer.py  network_definition.py  nn_formulation.py  partition_based_formulation.py  reduced_space.py  relu.py
src/optml/: __init__.py  block.py  formulation.py  skeleton.py  utils.py
src/optml/gbt/: __init__.py  formulation.py
src/optml/io/: onnx.py
src/optml/neuralnet/: __init__.py  full_space.py  keras_reader.py  network_definition.py  reduced_space.py  relu.py
tests/: conftest.py  omlt_tests.jl  test_block.py  test_formulation.py  test_scaling.py  test_setup.jl  test_skeleton.py  test_var.py
tests/base/: test_block.py  test_constraint.py  test_expression.py  test_jump.py  test_scaling.py  test_var.py
tests/gbt/: categorical_model.onnx  dimension_subset.onnx  test_formulation.py  test_gbt_formulation.py
tests/io/: test_input_bounds.py  test_keras_reader.py  test_onnx.py  test_onnx_parser.py  test_sklearn.py  test_torch_geometric.py  test_torch_geometric_reader.py  train_keras_models.py
tests/io/models/: gemm.onnx  keras_linear_131_sigmoid.onnx
tests/linear_tree/: test_lt_formulation.py
tests/lineartree/: script.ipynb  test_lt_formulation.py  xcript.ipynb
tests/models/: big.keras  gbt_model.onnx  gemm_not_transB.onnx  gemm_transB.onnx  keras_conv_7x7_relu.onnx  keras_conv_7x7_relu.onnx.bounds.json  keras_linear_131.keras  keras_linear_131.onnx  keras_linear_131_relu.keras  keras_linear_131_relu.onnx  keras_linear_131_relu_output_activation.keras  keras_linear_131_sigmoid.keras  keras_linear_131_sigmoid_output_activation.keras  keras_linear_131_sigmoid_softplus_output_activation.keras  keras_linear_2353.keras  maxpool_2d.onnx  mnist_example.onnx  mnist_example.onnx.data  sklearn_identity_131.pkl  sklearn_logistic_131.pkl  sklearn_logistic_131_bounds  sklearn_tanh_131.pkl
tests/models/keras_linear_131_sigmoid/: saved_model.pb
tests/neuralnet/: test_input_output.py  test_keras.py  test_keras_reader.py  test_layer.py  test_network_definition.py  test_neural_net.py  test_nn_formulation.py  test_onnx.py  test_partition_based_formulation.py  test_relu.py  test_scaling.py  train_keras_models.py
tests/notebooks/: test_run_notebooks.py
(+37 files in other folders)
